Add crops data and style crops container responsively

--- a/src/styles/Crop.css
+++ b/src/styles/Crop.css
@@ -10,6 +10,10 @@
     text-transform: capitalize;
 }
 
+.crop img {
+    width: 70px;
+}
+
 .crop-level {
     display: flex;
     justify-content: space-between;
