--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,9 @@ button:hover {
 
 .crops-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     gap: 40px;
-    margin: 40px;
+    margin: 0 auto;
+    padding: 40px;
+    max-width: 800px;
 }
