--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,14 @@ button:hover {
 
 .crops-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
     gap: 40px;
     margin: 0 auto;
     padding: 40px;
     max-width: 800px;
+}
+
+.crops-container h2 {
+    grid-column: 1 / -1;
+    justify-self: center;
 }
