--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
 * {
     box-sizing: border-box;
 }
 
 body {
     background-color: #7ed1b1;
-    font-family: sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 button:hover {
@@ -23,4 +25,33 @@ button:hover {
 .crops-container h2 {
     grid-column: 1 / -1;
     justify-self: center;
+    font-weight: bold;
+    font-size: 36px;
+    letter-spacing: 1px;
+    width: 100vw;
+    text-align: center;
+    position: relative;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+}
+
+.crops-container h2::before {
+    content: '';
+    width: calc(50vw - 4ch);
+    height: 5px;
+    background-color: black;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+}
+
+.crops-container h2::after {
+    content: '';
+    width: calc(50vw - 4ch);
+    height: 5px;
+    background-color: black;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
 }
