--- a/src/styles/Crop.css
+++ b/src/styles/Crop.css
@@ -1,13 +1,15 @@
 .crop {
     background-color: antiquewhite;
     text-align: center;
-    padding: 20px;
+    padding: 15px;
     border-radius: 20px;
     border: 4px solid rgb(215, 194, 166);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
 }
 
 .crop h3 {
     text-transform: capitalize;
+    font-weight: bold;
 }
 
 .crop img {
@@ -21,6 +23,7 @@
     background-color: white;
     border: 4px solid #563e8b;
     border-radius: 10px;
+    margin-top: 10px;
 }
 
 .crop-level button {
@@ -28,4 +31,12 @@
     border: none;
     color: white;
     padding: 5px 10px;
+}
+
+.decrement-btn {
+    border-radius: 5px 0 0 5px;
+}
+
+.increment-btn {
+    border-radius: 0 5px 5px 0;
 }
